s3-proxy/k8s-dev/patchImageTag.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-proxy
spec:
  template :
    spec:
      containers:
        - name: s3-proxy
          image: <+artifact.image>
